--- a/package.json
+++ b/package.json
@@ -13,11 +13,11 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.378.0",
+    "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
-    "vite-plugin-pwa": "^0.20.0",
     "vite-tsconfig-paths": "^4.3.2"
   },
   "devDependencies": {
@@ -27,6 +27,7 @@
     "@vitejs/plugin-react": "^3.0.0",
     "autoprefixer": "^10.4.19",
     "postcss": "^8.4.38",
+    "prettier-plugin-tailwindcss": "^0.5.14",
     "tailwindcss": "^3.4.3",
     "typescript": "^4.9.3",
     "vite": "^4.0.0"
